# MAPEXT

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  mapext.core.html  mapext.emission.html  mapext.html  mapext.photometry.html  modules.html  objects.inv  pyproject.toml  readme.md  requirements.txt  run_mapext.py  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
_modules/: index.html
_sources/: index.rst.txt  mapext.emission.rst.txt
docs/: conf.py  mapext.core.rst  mapext.photometry.rst  mapext.rst
mapext/: __init__.py  _version.py
mapext/analysis/: photometry.py
mapext/catalogues/: query.py
mapext/core/: __init__.py  mapClass.py  output.py  regClass.py  srcClass.py  usefulFunctions.py
mapext/emission/: __init__.py  emission_models.py  sedfitter.py
mapext/io/: map.py  outFile.py
mapext/photometry/: __init__.py  apPhoto.py  srcFitter.py
mapext/settings/: __init__.py  saving.py
tests/: mapTests_config.toml  test_basicMapFunctionality.py  test_sedAnalysis.py
tests/testdata/: SRC1_1.42_CAL0.fits  SRC1_1.42_CAL5.fits  SRC1_10.0_CAL0.fits  SRC1_10.0_CAL5.fits  SRC1_140.0_CAL0.fits  SRC1_140.0_CAL5.fits  SRC1_1875.0_CAL0.fits  SRC1_2.73_CAL0.fits  SRC1_2.73_CAL5.fits  SRC1_2143.0_CAL0.fits  SRC1_242.0_CAL0.fits  SRC1_242.0_CAL5.fits  SRC1_27.0_CAL0.fits  SRC1_27.0_CAL5.fits  SRC1_29.0_CAL0.fits  SRC1_29.0_CAL5.fits  SRC1_3000.0_CAL0.fits  SRC1_31.0_CAL0.fits  SRC1_31.0_CAL5.fits  SRC1_33.0_CAL0.fits  SRC1_33.0_CAL5.fits  SRC1_3333.0_CAL0.fits  SRC1_353.0_CAL0.fits  SRC1_353.0_CAL5.fits  SRC1_5.0_CAL0.fits  (+7 more)
(+32 files in other folders)
